force-app/main/default/objects/Batch__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <label>Address of Consignee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore Branch</fullName>
            </value>
            <value>
                <fullName>Gopalganj Branch</fullName>
            </value>
            <value>
                <fullName>Patna Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>