force-app/main/default/objects/Batch__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>getting populated on  checkbox true if is contact true वाला 
(यदि संपर्क सत्य है तो चेकबॉक्स सत्य पर पॉपुलेट हो रहा है)</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Batches</relationshipLabel>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>