force-app/main/default/objects/Batch__c/fields/Batch_Amount__c.field-meta.xml
<CustomField>
    <fullName>Batch_Amount__c</fullName>
    <label>Batch Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>