force-app/main/default/objects/Batch__c/fields/Handover_Person__c.field-meta.xml
<CustomField>
    <fullName>Handover_Person__c</fullName>
    <label>Handover Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>