force-app/main/default/objects/Batch__c/fields/Is_Linked_with_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Linked_with_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the contact is yagged and if click on checkbox then the contact account is populated on the account</description>
    <label>Is Linked with Account</label>
    <type>Checkbox</type>
</CustomField>