force-app/main/default/objects/Batch__c/fields/Mode_of_transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_transport__c</fullName>
    <label>Mode of transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Road</fullName>
            </value>
            <value>
                <fullName>Sea</fullName>
            </value>
            <value>
                <fullName>River</fullName>
            </value>
            <value>
                <fullName>Parcel</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>