force-app/main/default/objects/Batch__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Batches (Requestor Name)</relationshipLabel>
    <relationshipName>Batches1</relationshipName>
    <type>Lookup</type>
</CustomField>